--- a/first_html.html
+++ b/first_html.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>My First HTML Page</title>
+    <title>My Enhanced Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to My Page</h1>
-    <p>This is a simple paragraph on my HTML page.</p>
+    <h1>Welcome!</h1>
+    <p>This page is hosted on GitHub Pages.</p>
+    <button class="btn btn-success" onclick="sayHello()">Click Me</button>
+    <script src="script.js"></script>
 </body>
 </html>
