--- a/first_html.html
+++ b/first_html.html
@@ -2,14 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Enhanced Page</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Page</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
-    <p>This page is hosted on GitHub Pages.</p>
-    <button class="btn btn-success" onclick="sayHello()">Click Me</button>
-    <script src="script.js"></script>
+    <h1>Hello, World!</h1>
 </body>
 </html>
